--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/lodash": "^4.14.123",
     "@types/mongoose": "^5.3.24",
     "@types/morgan": "^1.7.35",
+    "@types/node": "^11.13.2",
+    "@types/node-cache": "^4.1.3",
     "eslint-plugin-typescript": "^0.14.0",
     "standard": "^12.0.1",
     "ts-node": "^8.0.3",
@@ -30,6 +32,7 @@
   "dependencies": {
     "@types/chalk": "^2.2.0",
     "@types/express": "^4.16.1",
+    "@types/redis": "^2.8.12",
     "@types/signale": "^1.2.1",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
@@ -38,6 +41,8 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.4.22",
     "morgan": "^1.9.1",
+    "node-cache": "^4.2.0",
+    "redis": "^2.8.0",
     "signale": "^1.4.0"
   }
 }
